assignment 1 ENV + HTML

--- a/public/Kanbas/Account/Profile/screen.html
+++ b/public/Kanbas/Account/Profile/screen.html
@@ -1,7 +1,52 @@
-<h1>Profile</h1>
+<table width="100%">
+  <tr>
+    <td valign="top">
+      <ul>
+        <li><a href="/Kanbas/Account/Profile/screen.html">Account</a></li>
+        <li><a href="/Kanbas/Dashboard/screen.html">Dashboard</a></li>
+        <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
+        <li><a href="#">Calendar</a></li>
+        <li><a href="#">Inbox</a></li>
+        <li><a href="#">History</a></li>
+        <li><a href="#">Studio</a></li>
+        <li><a href="#">Commons</a></li>
+        <li><a href="#">Help</a></li>
+      </ul>
+    </td>
+    <td valign="top">
+      <ul>
+        <li><a href="#">Notification</a></li>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">Files</a></li>
+        <li><a href="#">Settings</a></li>
+        <li><a href="#">ePortfolios</a></li>
+        <li><a href="#">Shared Content</a></li>
+        <li><a href="#">The Hub</a></li>
+        <li><a href="#">Qwickly Course Tools</a></li>
+        <li><a href="#">Global Announcements</a></li>
+      </ul>
+    </td>
+    <td valign="top">
+      Jose Annunziato's Profile
+      <hr />
+      <table width="100%">
+      <tr>
+        <td>
+          <h2>Jose Annunziato</h2>
+          <h2>Contact</h2>
+          <p>No registered services, you can add some on the settings page.</p>
+          <h2>Biography</h2>
+          <p>Faculty, Software Engineer, AI, Space, and renewables enthusiast</p>
+          <h2>Links</h2>
+          <a href="#">Youtube</a>
+        </td>
+        <td valign="top">
+          <button><a href="/Kanbas/Account/Profile/EditProfile/screen.html" style="text-decoration: none;">Edit Profile</a></button>
+        </td>
+      </tr>
+      </table>
+    </td>
+  </tr>
+</table>
 
-<h2>Alice Wonderland</h2>
 
-<form action="/Kanbas/Account/Profile/EditProfile/screen.html">
-  <button>Edit Profile!!!!</button>
-</form>
