--- a/public/Kanbas/Courses/Home/screen.html
+++ b/public/Kanbas/Courses/Home/screen.html
@@ -5,16 +5,36 @@
         <li><a href="/Kanbas/Account/Profile/screen.html">Account</a></li>
         <li><a href="/Kanbas/Dashboard/screen.html">Dashboard</a></li>
         <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
+        <li><a href="#">Calendar</a></li>
+        <li><a href="#">Inbox</a></li>
+        <li><a href="#">History</a></li>
+        <li><a href="#">Studio</a></li>
+        <li><a href="#">Commons</a></li>
+        <li><a href="#">Help</a></li>
       </ul>
     </td>
     <td valign="top">
       <ul>
         <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
         <li><a href="/Kanbas/Courses/Modules/screen.html">Modules</a></li>
+        <li><a href="#">Piazza</a></li>
+        <li><a href="#">Zoom Meetings</a></li>
         <li>
           <a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a>
         </li>
+        <li><a href="#">Quizzes</a></li>
         <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
+        <li><a href="#">People</a></li>
+        <li><a href="#">Panopto Video</a></li>
+        <li><a href="#">Discussion</a></li>
+        <li><a href="#">Announcements</a></li>
+        <li><a href="#">Pages</a></li>
+        <li><a href="#">Files</a></li>
+        <li><a href="#">Rubrics</a></li>
+        <li><a href="#">Outcomes</a></li>
+        <li><a href="#">Collaborations</a></li>
+        <li><a href="#">Syllabus</a></li>
+        <li><a href="/Kanbas/Courses/Settings/screen.html">Settings</a></li>
       </ul>
     </td>
     <td valign="top">
@@ -35,9 +55,29 @@
               LEARNING OBJECTIVES
               <ul>
                 <li>Introduction to the course</li>
-                <li>Introduction to the course website</li>
-                <li>Introduction to the course tools</li>
-                <li>Introduction to the course assignments</li>
+                <li>Learn what is Web Development</li>
+                <li>Creating a development environment</li>
+                <li>Creating a Web Application</li>
+                <li>Getting started whith the 1st assignments</li>
+              </ul>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              READING
+              <ul>
+                <li>Full Stack Developer - Chapter 1 - Introduction</li>
+                <li>Full Stack Developer - Chapter 2 - Creating User Interfaces With HTML</li>
+              </ul>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              SLIDES
+              <ul>
+                <li><a href="#">Introduction to Web Development Links to an external site.</a></li>
+                <li><a href="#">Creating an HTTP server with Node.js Links to an external site.</a></li>
+                <li><a href="#">Creating a React Application Links to an external site.</a></li>
               </ul>
             </li>
           </ul>
@@ -48,10 +88,33 @@
             <li>
               LEARNING OBJECTIVES
               <ul>
-                <li>Introduction to the course</li>
-                <li>Introduction to the course website</li>
-                <li>Introduction to the course tools</li>
-                <li>Introduction to the course assignments</li>
+                <li>Learn how to create user interfaces with HTML</li>
+                <li>Keep working on assignment 1</li>
+                <li>Deploy the assignment to Netlify</li>
+              </ul>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              READING
+              <ul>
+                <li>Full Stack Developer - Chapter 1 - Introduction</li>
+                <li>Full Stack Developer - Chapter 2 - Creating User Interfaces With HTML</li>
+              </ul>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              SLIDES
+              <ul>
+                <li><a href="#">Introduction to HTML and the DOM</a></li>
+                <li><a href="#">Formatting Web content with Headings and Paragraphs</a></li>
+                <li><a href="#">Formatting content with Lists and Tables</a></li>
+                <li><a href="#">Creating Web Forms </a></li>
+                <li><a href="#">Navigating with Anchors</a></li>
+                <li><a href="#">Embedding content with Iframes</a></li>
+                <li><a href="#">Drawing with Scalable Vector Graphics</a></li>
+                <li><a href="#">HTML - all the slides above</a></li>
               </ul>
             </li>
           </ul>
@@ -62,10 +125,39 @@
             <li>
               LEARNING OBJECTIVES
               <ul>
-                <li>Introduction to the course</li>
-                <li>Introduction to the course website</li>
-                <li>Introduction to the course tools</li>
-                <li>Introduction to the course assignments</li>
+                <li>Introduction to CSS</li>
+                <li>Selectors by tag ID, classes, and document structure</li>
+                <li>Styling color and background color</li>
+                <li>Styling dimensions and positions</li>
+                <li>The box model - styling margins, borders, and paddings</li>
+              </ul>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              READING
+              <ul>
+                <li>Full Stack Developer - Chapter 3 - Styling User Interfaces With Cascading Style Sheets</li>
+              </ul>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              SLIDES
+              <ul>
+                <li><a href="#">
+                  Introduction to Cascading Style Sheets</a></li>
+                <li><a href="#">
+                  Styling with Colors </a></li>
+                <li><a href="#">
+                  The Box Model </a></li>
+                <li><a href="#">Size & Position  </a></li>
+                <li><a href="#">
+                  Float</a></li>
+                <li><a href="#">Rotating content & Gradient background </a></li>
+                <li><a href="#">
+                  Flex</a></li>
+                <li><a href="#">CSS - all slides above</a></li>
               </ul>
             </li>
           </ul>
@@ -76,10 +168,35 @@
             <li>
               LEARNING OBJECTIVES
               <ul>
-                <li>Introduction to the course</li>
-                <li>Introduction to the course website</li>
-                <li>Introduction to the course tools</li>
-                <li>Introduction to the course assignments</li>
+                <li>CSS Libraries: Bootstrap, Tailwind</li>
+                <li>Float and grid systems</li>
+                <li>Media queries and responsive design</li>
+                <li>Laying out content with Flex</li>
+                <li>Final Project Requirements</li>
+              </ul>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              READING
+              <ul>
+                <li>Full Stack Developer - Chapter 4 - Styling Web Pages With The Bootstrap CSS Library</li>
+              </ul>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              SLIDES
+              <ul>
+                <li><a href="#">Introduction to Bootstrap</a></li>
+                <li><a href="#">Grid System  </a></li>
+                <li><a href="#">Bootstrap Navigation</a></li>
+                <li><a href="#">Bootstrap Navbar   </a></li>
+                <li><a href="#">Bootstrap Tables</a></li>
+                <li><a href="#">Bootstrap Forms</a></li>
+                <li><a href="#">Showing and Hiding Content with Bootstrap</a></li>
+                <li><a href="#">Miscellaneous Bootstrap Styles</a></li>
+                <li><a href="#">Fontawesome </a></li>
               </ul>
             </li>
           </ul>
@@ -97,9 +214,57 @@
               </ul>
             </li>
           </ul>
+          <ul>
+            <li>
+              READING
+              <ul>
+                <li>Full Stack Developer - Chapter 5 - Creating Single Page Applications With React.Js</li>
+              </ul>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              SLIDES
+              <ul>
+                <li><a href="#">Introduction to JavaScript</a></li>
+                <li><a href="#">ES6 Variables and Functions</a></li>
+                <li><a href="#">ES6 Arrays and Strings</a></li>
+                <li><a href="#">ES6 Object and Array Destructing</a></li>
+                <li><a href="#"> ES6 Modules and Classes</a></li>
+                <li><a href="#">ES6 New Features</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
         </li>
       </ul>
     </td>
-    <td valign="top">Course Status</td>
+    <td valign="top">
+      <h2>Course Status</h1>
+      <button>Unpublish</button>
+      <button>Published</button>
+      <ul>
+        <li><a href="#">Import Existing Content</a></li>
+        <li><a href="#">Import From Commons</a></li>
+        <li><a href="#">Choose Home Page</a></li>
+        <li><a href="#">View Course Stream</a></li>
+        <li><a href="#"> New Announcement</a></li>
+        <li><a href="#">New Analytics</a></li>
+        <li><a href="#">View Course Notification</a></li>
+      </ul>
+      <h2>Comming Up</h1>
+        <a href="#">View Calendar</a>
+        <ul>
+          <li><a href="#">Lecture
+            CS5610 17387 Web Development SEC 03 Fall 2023 [VTL-2-OL]
+            Sep 7 at 11:45am</a></li>
+          <li><a href="#">Lecture
+            CS5610 17387 Web Development SEC 03 Fall 2023 [VTL-2-OL]
+            Sep 11 at 11:45am</a></li>
+          <li><a href="#">CS5610 06 SP23 Lecture
+            CS5610 17387 Web Development SEC 03 Fall 2023 [VTL-2-OL]
+            Sep 11 at 6pm</a></li>
+        </ul>
+    </td>
   </tr>
 </table>
