--- a/public/Kanbas/Account/Profile/EditProfile/screen.html
+++ b/public/Kanbas/Account/Profile/EditProfile/screen.html
@@ -1,16 +1,81 @@
-<h1>Edit Profile</h1>
+<table width="100%">
+  <tr>
+    <td valign="top">
+      <ul>
+        <li><a href="/Kanbas/Account/Profile/screen.html">Account</a></li>
+        <li><a href="/Kanbas/Dashboard/screen.html">Dashboard</a></li>
+        <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
+        <li><a href="#">Calendar</a></li>
+        <li><a href="#">Inbox</a></li>
+        <li><a href="#">History</a></li>
+        <li><a href="#">Studio</a></li>
+        <li><a href="#">Commons</a></li>
+        <li><a href="#">Help</a></li>
+      </ul>
+    </td>
+    <td valign="top">
+      <ul>
+        <li><a href="#">Notification</a></li>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">Files</a></li>
+        <li><a href="#">Settings</a></li>
+        <li><a href="#">ePortfolios</a></li>
+        <li><a href="#">Shared Content</a></li>
+        <li><a href="#">The Hub</a></li>
+        <li><a href="#">Qwickly Course Tools</a></li>
+        <li><a href="#">Global Announcements</a></li>
+      </ul>
+    </td>
+    <td valign="top">
+      <h2>Jose Annunziato</h2>
+      Name:*<input type="text" value="Jose Annunziato"></input>
+      Pronouns:<select><option>None</option></select> <br />
+      <p></p>
+      Title:<input type="text"></input>
 
-<form action="/Kanbas/Account/Profile/screen.html">
-  Name: <input name="fullName" type="text" value="Alice Wonderland" />
-  <br />
-  Biography:<br />
-  <textarea name="biography">
-I followed the white rabbit down the hole.
-</textarea
-  >
-  <br />
-  <button>Save</button>
-  <button>Cancel</button>
-</form>
+      <h2>Contact</h2>
+      <p>No registered services, you can add some on the <a>settings</a> page.</p>
 
-<!-- ?fullName=Alice+Wonderland&biography=I+followed+the+white+rabbit+down+the+hole.%0D%0A -->
+      <h2>Contact</h2>
+      <p>No registered services, you can add some on the <a>settings</a> page.</p>
+
+      <h2>Biography</h2>
+      <label>Faculty, Software Engineer, AI, Space, and renewables enthusiast</label><br />
+      <textarea cols="50" rows="10">
+        Faculty, Software Engineer, AI, Space, and renewables enthusiast
+      </textarea>
+
+      <h2>Links</h2>
+      <ul>
+        <li>
+          <a href="#">YouTube</a>
+        </li>
+      </ul>
+      <table>
+        <thead>
+          <tr>
+              <th>Title</th>
+              <th>URL</th>
+          </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>
+            <input type="text" value="YouTube"></input>
+          </td>
+          <td valign="top">
+            &rarr;
+            <input type="text" value="https://www.youtube.com"></input>
+            <button>Remove</button>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+      <button>Add another link</button> <br />
+      <button>Cancel</button> <button>Save Profile</button><br />
+      <button>Edit Profile</button> <button>Cancel Editing</button><br />
+    </td>
+  </tr>
+</table>
+
+
