--- a/public/Kanbas/Courses/Grades/index.html
+++ b/public/Kanbas/Courses/Grades/index.html
@@ -1,29 +1,37 @@
+<select>
+  <option>Gradebook</option>
+</select>
 <button>Import</button>
 <select>
   <option>Export</option>
   <option>UnPublish</option>
 </select>
 <button>Configure</button>
-
-<table width="100%">
+<p></p> 
+<table width="100%" >
   <tbody>
     <tr>
       <td>
-        Student Names<br />
+        <h2>Student Names</h2>
         <input
           title="Type the name of the student to search for"
           placeholder="Search Students"
+          style="margin-bottom: 15px"
         />
       </td>
+    </tr>
+    <tr>
       <td>
-        Assignment Names<br />
-        <input />
+        <h2>Assignment Names</h2>
+        <input 
+        placeholder="Search Assignments"
+        style="margin-bottom: 18px"/>
       </td>
     </tr>
   </tbody>
 </table>
-
-<table width="100%">
+<button style="margin-bottom: 18px;">Apply Filters</button>
+<table width="100%" border="1" style="white-space: nowrap; text-align: center">
   <thead>
     <tr>
       <th>Student Name</th>
@@ -31,47 +39,11 @@
       <th>A2 - CSS</th>
       <th>A3 - JS</th>
       <th>A4 - PHP</th>
-      <th>A5 - SQL</th>
-      <th>A6 - React</th>
-      <th>A7 - Node</th>
-      <th>A8 - Express</th>
-      <th>A9 - MongoDB</th>
-      <th>A10 - Mongoose</th>
-      <th>A11 - Redux</th>
-      <th>Q1</th>
-      <th>Q2</th>
-      <th>Q3</th>
-      <th>Q4</th>
-      <th>Q5</th>
-      <th>Q6</th>
-      <th>Exam 1</th>
-      <th>Exam 2</th>
-      <th>Exam 3</th>
-      <th>Exam 4</th>
-      <th>Exam 5</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <td>Alice Wonderland</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
       <td>100%</td>
       <td>100%</td>
       <td>100%</td>
@@ -83,14 +55,6 @@
       <td>100%</td>
       <td>100%</td>
       <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
     </tr>
     <tr>
       <td>Charlie Chaplin</td>
@@ -98,13 +62,9 @@
       <td>100%</td>
       <td>100%</td>
       <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
-      <td>100%</td>
+    </tr>
+    <tr>
+      <td>James Bond</td>
       <td>100%</td>
       <td>100%</td>
       <td>100%</td>
