Upload the part for the graduate

--- a/public/Kanbas/Account/Profile/EditProfile/screen.html
+++ b/public/Kanbas/Account/Profile/EditProfile/screen.html
@@ -33,13 +33,13 @@
           </li>
         </a>
 
-        <a href="/Kanbas/Dashboard/screen.html">
+        <a href="../../../Courses/Dashboard/screen.html">
           <li class="list-group-item">
             <i class="fas fa-tachometer-alt fa-3x"></i>
             Dashboard
           </li>
         </a>
-        <a href="/Kanbas/Courses/Home/screen.html"></a>
+        <a href="../../../Courses/Home/screen.html">
         <li class="list-group-item">
           <i class="fas fa-book fa-3x"></i>
           Courses
