--- a/public/Kanbas/Courses/Assignments/AssignmentEditor/screen.html
+++ b/public/Kanbas/Courses/Assignments/AssignmentEditor/screen.html
@@ -161,7 +161,7 @@
         <a href="#">
           <li class="list-group-item">Syllabus</li>
         </a>
-        <a href="/Kanbas/Courses/Settings/screen.html">
+        <a href="../../../Courses/Settings/screen.html">
           <li class="list-group-item">Settings</li>
         </a>
       </ul>
