--- a/public/Kanbas/Courses/Home/screen.html
+++ b/public/Kanbas/Courses/Home/screen.html
@@ -160,7 +160,7 @@
         <a href="#">
           <li class="list-group-item">Syllabus</li>
         </a>
-        <a href="/Kanbas/Courses/Settings/screen.html">
+        <a href="../../Courses/Settings/screen.html">
           <li class="list-group-item">Settings</li>
         </a>
       </ul>
